# DreamWriter

./: README.md  pyproject.toml
src/dream_writer/: emb_server.py  utils.py
src/dream_writer/tale/: full_automation.py  pipeline.py
src/dream_writer/tale/structs/: __init__.py  knowledge.py  tale.py
src/dream_writer/tale/writers/: __init__.py  answer.py  completion.py  outline.py  question.py  summary.py  time_indicator.py
src/dream_writer/webui/: main.py  resource.py
src/dream_writer/webui/tabs/: __init__.py  composition_tab.py  knowledge.py  outline.py
src/webui/: main.py  resource.py
src/webui/tabs/: __init__.py  composition_tab.py  knowledge.py  outline.py
